--- a/src/User Pages/component/Home/home.css
+++ b/src/User Pages/component/Home/home.css
@@ -30,8 +30,9 @@
     .grid-style{
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 20px;
       flex-wrap: wrap;
-    justify-content: center;
+      justify-content: center;
     }
    } 
    @media (max-width: 768px){
@@ -44,7 +45,7 @@
    @media (max-width: 576px){
     .grid-style{
       display: grid;
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 1fr;
     }
    } 
 
