--- a/src/User Pages/component/NavBar-Footer/Style.css
+++ b/src/User Pages/component/NavBar-Footer/Style.css
@@ -9,14 +9,14 @@
   align-items: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1;
-  background-color: transparent;
+  background-color: rgba(8, 55, 46, 0.167);
 }
 
 .nav-icon {
   display: flex;
   align-items: center;
   color: #555;
-  background-color: #1ba8c41b;
+  background-color: #0e6b7548;
   border-radius: 10px;
   margin-left: 15px;
   padding: 5px 10px;
@@ -42,12 +42,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(84,98,102);
-  background-color: #87acba1f;
+  color: rgb(21, 23, 23);
+  /* border:  solid; */
+  background-color: #0e6b7548;
   border-radius: 15px;
   transition: transform 0.5s;
   text-decoration: none;
   margin: 0 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .Catogarylink .text {
@@ -56,11 +58,13 @@
   align-items: center;
   justify-content: center;
   color: rgb(84,98,102);
-  background-color: #87acba1f;
+  background: #0e6b7548;
+  /* border:  solid black; */
   border-radius: 15px;
   transition: transform 0.5s;
   text-decoration: none;
   margin: 0 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-link:hover,
@@ -79,7 +83,7 @@
 .log-btn, .cart-link {
   border: none;
   color: #333;
-  background-color: #1ba8c41b;
+  background-color: #0e6b7548;
   border-radius: 20px;
   padding: 8px 16px;
   margin: 0 5px;
@@ -245,6 +249,10 @@
 
   .searchBtn {
     margin-left: 110px;
+  }
+
+  .menu-item{
+    visibility: visible;
   }
 }
 
