--- a/src/User Pages/component/Home/home.css
+++ b/src/User Pages/component/Home/home.css
@@ -77,10 +77,9 @@
   
   .search {
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 15px;
-    margin-top: 50px;    
-    border: none;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 0px;
+    margin-top: 30px;
   }
   
   .text-center {
