--- a/src/User Pages/component/NavBar-Footer/Style.css
+++ b/src/User Pages/component/NavBar-Footer/Style.css
@@ -9,14 +9,14 @@
   align-items: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1;
-  background-color: rgba(8, 55, 46, 0.167);
+  background-color: transparent;
 }
 
 .nav-icon {
   display: flex;
   align-items: center;
   color: #555;
-  background-color: #0e6b7548;
+  background-color: #b1cdcf80;
   border-radius: 10px;
   margin-left: 15px;
   padding: 5px 10px;
@@ -43,8 +43,7 @@
   align-items: center;
   justify-content: center;
   color: rgb(21, 23, 23);
-  /* border:  solid; */
-  background-color: #0e6b7548;
+  background-color: #b1cdcf80;
   border-radius: 15px;
   transition: transform 0.5s;
   text-decoration: none;
@@ -57,9 +56,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(84,98,102);
-  background: #0e6b7548;
-  /* border:  solid black; */
+  color: rgb(84, 98, 102);
+  background: #b1cdcf80;
   border-radius: 15px;
   transition: transform 0.5s;
   text-decoration: none;
@@ -74,16 +72,17 @@
 .search-bar input:hover,
 .Catogarylink .text:hover {
   background-color: #1ba8c41b;
-  border: 1px solid rgb(84,98,102);
+  border: 1px solid rgb(84, 98, 102);
   border-radius: 20px;
   transform: scale(1.1);
   box-shadow: 5px 3px 5px rgb(163, 159, 159);
 }
 
-.log-btn, .cart-link {
+.log-btn,
+.cart-link {
   border: none;
   color: #333;
-  background-color: #0e6b7548;
+  background-color: #b1cdcf80;
   border-radius: 20px;
   padding: 8px 16px;
   margin: 0 5px;
@@ -94,9 +93,10 @@
   justify-content: center;
 }
 
-.log-btn:hover, .cart-link:hover {
+.log-btn:hover,
+.cart-link:hover {
   background-color: #1ba8c41b;
-  border: 1px solid rgb(84,98,102);
+  border: 1px solid rgb(84, 98, 102);
   transform: scale(1.1);
   box-shadow: 5px 3px 5px rgb(163, 159, 159);
 }
@@ -134,9 +134,29 @@
 .search-bar input {
   height: 34px;
   width: 200px;
-  border-color: rgb(84,98,102);
+  border-color: rgb(84, 98, 102);
   border-radius: 15px;
   background-color: #87acba1f;
+}
+
+.search-bar input ::placeholder{
+  color: black;
+}
+
+input::-webkit-input-placeholder { 
+  color: black;
+}
+
+input::-moz-placeholder { 
+  color: black;
+}
+
+input:-ms-input-placeholder { 
+  color: black;
+}
+
+input:-moz-placeholder { 
+  color: black;
 }
 
 .searchBtn {
@@ -159,7 +179,7 @@
   position: fixed;
   top: 10px;
   right: 10px;
-  background-color: #f0f4f7;
+  background-color: #b1cdcf80;
   padding: 10px;
   border-radius: 50%;
   cursor: pointer;
@@ -177,6 +197,8 @@
   opacity: 0;
   transition: all 0.3s ease;
   pointer-events: none;
+  visibility: hidden;
+
 }
 
 .menu-open {
@@ -207,6 +229,14 @@
   background-color: #555;
 }
 
+.Catogarylink {
+  display: flex;
+}
+
+.car-log {
+  display: flex;
+}
+
 @media (max-width: 1024px) {
   .navbar-menu {
     flex-wrap: wrap;
@@ -220,7 +250,115 @@
   }
 }
 
+@media (max-width: 992px) {
+  .navbar-menu {
+    display: none;
+  }
+
+  .log-btn {
+    display: none;
+  }
+
+  .car-log {
+    margin-right: 70px;
+  }
+
+  .off-canvas-container{
+    visibility: visible;
+  }
+  .search-bar {
+    margin-left: 70px;
+  }
+
+  .search-bar input {
+    width: 150px;
+  }
+
+  .menu-toggle {
+    visibility: visible;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+  }
+
+  .off-canvas-container {
+    width: 200px;
+    top: 80px;
+    right: 15px;
+    border-radius: 0;
+    padding: 5px;
+  }
+
+  .searchBtn {
+    margin-left: 110px;
+  }
+
+  .menu-item {
+    visibility: visible;
+  }
+}
+
 @media (max-width: 768px) {
+  .search-bar input {
+    position: relative;
+    margin-top: 60px;
+    margin-right: 10px;
+    width: 150px;
+  }
+
+  .nav-icon{
+    margin-bottom: 30px;
+  }
+
+  .search-bar input.show {
+    display: block;
+  }
+
+  .searchBtn {
+    display: none;
+    margin-right: 100px;
+    cursor: pointer;
+  }
+
+  .car-log {
+    position: absolute;
+    margin-left: auto;
+    margin-bottom: 40px;
+    right: 0px;
+  }
+
+
+  .menu-toggle {
+    visibility: visible;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+  }
+
+  .off-canvas-container {
+    position: absolute;
+    width: fit-content;
+    top: 80px;
+    right: 0px;
+    padding-right: 50px;
+    margin-top: 65px;
+    width: 200px;
+    border-radius: 0;
+  }
+
+
+  .menu-item {
+    visibility: visible;
+  }
+}
+
+@media (max-width: 480px) {
+  .category-image {
+    width: 100%;
+    height: 130px;
+    box-shadow: 0px 0px 5px black;
+    transition: transform 0.5s;
+  }
   .navbar-menu {
     display: none;
   }
@@ -251,91 +389,96 @@
     margin-left: 110px;
   }
 
-  .menu-item{
+  .menu-item {
     visibility: visible;
   }
 }
 
-@media (max-width: 480px) {
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
+@media (max-width: 360px) {
+  .category-image {
+    width: 100%;
+    height: 130px;
+    box-shadow: 0px 0px 5px black;
+    transition: transform 0.5s;
+  }
+  .navbar-menu {
+    display: none;
   }
 
-  .nav-icon {
-    margin-left: 0;
+  .log-btn {
+    display: none;
   }
 
   .search-bar input {
-    width: 120px;
+    width: 150px;
   }
 
-  .searchBtn {
-    margin-left: 90px;
+  .menu-toggle {
+    visibility: visible;
+    position: fixed;
+    top: 5px;
+    right: 10px;
   }
 
   .off-canvas-container {
-    top: 40px;
+    width: fit-content;
+    top: 50px;
+    right: 0;
+    border-radius: 0;
+  }
+
+  .searchBtn {
+    margin-left: 110px;
+  }
+
+  .menu-item {
+    visibility: visible;
   }
 }
 
-.Catogarylink {
+/* Footer */
+
+footer {
+  position: sticky;
+  bottom: -5;
+  background: #eceeef;
+
+  .text-footer {
+    display: flex;
+    justify-content: center;
+  }
+}
+.text-footer-list {
+  height: 34px;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(84, 98, 102);
+  background-color: #87acba1f;
+  border-radius: 15px;
+  transition: transform 0.5s;
+  font-weight: bold;
+  border: none;
 }
 
-.car-log {
+.icon-footer-list {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(84, 98, 102);
+  background-color: #87acba1f;
+  border-radius: 15px;
+  transition: transform 0.5s;
+  font-weight: bold;
+  border: none;
 }
 
+.icon-footer-list:hover,
+.text-footer-list:hover {
+  background-color: #1ba8c41b;
+  border: 1px solid rgb(84, 98, 102);
+  transform: scale(1.1);
+  box-shadow: 5px 3px 5px rgb(163, 159, 159);
+}
 
-
-    /* Footer */
-
-    footer {
-      position: sticky;
-      bottom: -5;
-      background: #eceeef;
-     
-     .text-footer{
-      display: flex;
-      justify-content: center;
-     } 
-    
-    }
-    .text-footer-list{
-      height: 34px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: rgb(84,98,102);
-      background-color: #87acba1f;
-      border-radius: 15px;
-      transition: transform 0.5s;
-     font-weight: bold;
-     border: none;
-    
-    }
-    
-    .icon-footer-list{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: rgb(84,98,102);
-      background-color: #87acba1f;
-      border-radius: 15px;
-      transition: transform 0.5s;
-     font-weight: bold;
-     border: none;
-    }
-    
-    .icon-footer-list:hover,
-    .text-footer-list:hover{
-      background-color: #1ba8c41b;
-      border: 1px solid rgb(84,98,102);
-      transform: scale(1.1);
-      box-shadow: 5px 3px 5px rgb(163, 159, 159);
-    }
-    
-    /* End Footer  */
-  
-  
+/* End Footer  */
